k8s/kustomize/dev-django.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django
  name: django
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: django
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: django
  name: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - command:
        - bash
        - -c
        - /config/start.sh
        image: gcr.io/banded-totality-247701/job_recommender:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /ht
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: django
        ports:
        - containerPort: 5000
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ht
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /secrets/gcp
          name: gcp-credentials
          readOnly: true
      - command:
        - /cloud_sql_proxy
        - --dir=/cloudsql
        - -instances=${GCP_PRJECT_ID}:${GCP_REGION}:${POSTGRES_DB}=tcp:${POSTGRES_PORT}
        - -credential_file=/secrets/cloudsql/cloudsql-credentials.json
        image: gcr.io/cloudsql-docker/gce-proxy:1.16
        name: cloudsql-proxy
        volumeMounts:
        - mountPath: /secrets/cloudsql
          name: gcp-credentials
          readOnly: true
        - mountPath: /etc/ssl/certs
          name: ssl-certs
        - mountPath: /cloudsql
          name: cloudsql
      priorityClassName: very-high-priority
      volumes:
      - configMap:
          defaultMode: 511
          name: django-config
        name: config
      - name: mysql-sshkey
        secret:
          secretName: mysql-sshkey
      - name: gcp-credentials
        secret:
          secretName: gcp-credentials
      - hostPath:
          path: /etc/ssl/certs
        name: ssl-certs
      - emptyDir: null
        name: cloudsql
