k8s/kustomize/dev-sentinel.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentinel
  name: sentinel
spec:
  clusterIP: None
  ports:
  - name: sentinel
    port: 26379
  selector:
    app: sentinel
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: sentinel
  name: sentinel
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sentinel
  serviceName: sentinel
  template:
    metadata:
      labels:
        app: sentinel
    spec:
      containers:
      - command:
        - redis-sentinel
        - /sentinel-config/sentinel.conf
        image: redis:6.0.1-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: sentinel
        ports:
        - containerPort: 26379
          name: sentinel
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          failureThreshold: 5
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /sentinel-config
          name: shared
      priorityClassName: middle-priority
      volumes:
      - emptyDir: {}
        name: shared
      - configMap:
          defaultMode: 511
          name: sentinel-config
        name: config
