k8s/kustomize/prod-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: job-recommender
spec:
  rules:
  - host: job-recommender.johnjung.shop
    http:
      paths:
      - backend:
          serviceName: celery-flower
          servicePort: 5555
        path: /flower(/|$)(.*)
      - backend:
          serviceName: django
          servicePort: 80
        path: /
  tls:
  - hosts:
    - job-recommender.johnjung.shop
    secretName: acme-crt-secret-prod
